Use getFirst() for clarity.